[package]
name = "cliff3-util"
version = "0.1.1"
edition = "2021"
authors = ["JoonHo Son <joonho.son@me.com>"]
repository = "https://github.com/JoonHoSon/rust-util"
keywords = ["AES", "Encryption", "Decryption", "SHA", "RSA"]
description = "SHA(256/512) hash, AES/RSA 암복화 및 한글 관련 유틸리티 함수 모음 입니다."
license = "MIT"
resolver = "2"

[features]
string = []
io = []
encrypt = ["sha2/default", "openssl/default"]
default = ["string", "encrypt"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 20

[dependencies]
aes-gcm = { version = "0.10.3", features = ["default"] }
lazy_static = "1.4.0"
openssl = "0.10.63"
rand = "0.8.5"
regex = "1.10.0"
sha2 = "0.10.8"
chrono = "0.4.38"

[dev-dependencies]
base64 = "0.22.1"