[package]
name = "cliff3-util"
version = "0.2.2"
edition = "2021"
authors = ["JoonHo Son <joonho.son@me.com>"]
repository = "https://github.com/JoonHoSon/rust-util"
keywords = ["AES", "SHA", "RSA", "IO", "KOREAN"]
description = "SHA(256/512) hash, AES/RSA 암복화, 한글, I/O 및 날짜 관련 함수 모음 입니다."
license = "MIT"
resolver = "2"

[features]
string = []
io = []
date = []
encrypt = ["sha2/default", "openssl/default"]
default = ["string", "encrypt", "io"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 20

[dependencies]
aes-gcm = { version = "0.10.3", features = ["default"] }
lazy_static = "1.4.0"
openssl = "0.10.63"
rand = "0.8.5"
regex = "1.10.0"
sha2 = "0.10.8"
chrono = "0.4.38"
chrono-tz = "0.10.0"

[dev-dependencies]
base64 = "0.22.1"